--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "tulind-wrapper",
   "version": "0.1.0",
   "main": "index.js",
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc --watch",
+    "dev": "node index.js"
+  },
   "repository": "https://github.com/wrule/tulind-wrapper.git",
   "license": "MIT",
   "private": false
